--- a/Rosovina/Info.plist
+++ b/Rosovina/Info.plist
@@ -18,6 +18,15 @@
 		<string>Poppins-Medium.ttf</string>
 		<string>Poppins-ExtraBold.ttf</string>
 	</array>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>whatsapp</string>
+    </array>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
