--- a/Rosovina/Info.plist
+++ b/Rosovina/Info.plist
@@ -18,6 +18,12 @@
 		<string>Poppins-Medium.ttf</string>
 		<string>Poppins-ExtraBold.ttf</string>
 	</array>
+    <key>NSCameraUsageDescription</key>
+    <string>This allows Tabby to take a photo</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>This allows Tabby to select a photo</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>For secure verification on the checkout step</string>
     <key>LSApplicationQueriesSchemes</key>
     <array>
         <string>whatsapp</string>
